# ai_helpdesk_cloud

./: .gitignore  main.py  pyproject.toml
backend/: .env.example  config.py  init_db.py  main.py  requirements.txt
backend/administration/: auth.py  dependencies.py
backend/app/: init_db.py  main.py
backend/app/administration/: auth.py  security.py
backend/app/kb/: 00-platform-overview.md  03-authentication-policy-2024.md  04-virtual-lab-operations-and-recovery.md  05-environment-mapping-and-routing.md  08-logging-monitoring-and-security-controls.md  10-known-error-catalog.md
backend/app/models/: db.py  schemas.py
backend/app/routes/: auth.py  chat.py  metrics.py  tickets.py
backend/app/services/: embeddings.py  guardrails.py  memory.py  metrics.py  prompts.py  rag.py  role_policy.py  tickets.py  tier_service.py
backend/docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  KB_STRUCTURE.md  TESTING.md
backend/kb/: 01-access-and-authentication-v2.1.md  02-authentication-policy-2023.md  06-container-runtime-troubleshooting.md  07-dns-and-network-troubleshooting.md  09-tiering-escalation-and-sla-policy.md
backend/models/: db.py  schemas.py
backend/routes/: auth.py  chat.py  metrics.py  tickets.py
backend/services/: chunking.py  embeddings.py  memory.py  metrics.py  rag.py  tickets.py
dsai-help-desk-main/: index.html  package.json
dsai-help-desk-main/src/: App.jsx
dsai-help-desk-main/src/components/: AIChatPanel.jsx  AnalyticsDashboard.jsx  AnalyticsPage.jsx  ChatMessage.jsx  Layout.jsx  LoginPage.jsx  SignIn.jsx  TicketDashboard.jsx
(+5 files in other folders)
