[project]
name = "01-full-stack-ai-engineer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.8"
dependencies = [
    "fastapi>=0.128.2",
    "httpx>=0.28.1",
    "langchain>=1.2.8",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.8",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.1.7",
    "passlib[argon2]>=1.7.4",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0.46",
    "tiktoken>=0.12.0",
    "uvicorn>=0.40.0",
]
